# hil-rig-mcu-firmware

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .project  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run_checks.sh  test.txt
src/: CMakeLists.txt  README.md  global_config.h
src/app_main/: CMakeLists.txt  README.md  app_main.c  app_main.h
src/background/: CMakeLists.txt  README.md  background.c  background.h
src/background/tests/: test_background.cpp
src/buffer_manager/: CMakeLists.txt  README.md  instruction_buffer.c  instruction_buffer.h  result_buffer.c
src/console/: CMakeLists.txt  README.md  command_handler.c  command_helpers.h  console.c  console.h  spi_loop_command.c
src/console/subsystem_command_apis/: console_I2C.c  console_I2C.h  console_can.c  console_can.h  console_logic_expander.c  console_logic_expander.h  console_pwm_capture.c  console_pwm_capture.h  console_spi.c  console_uart.c  console_uart.h
src/console/tests/: test_console.cpp
src/example/: CMakeLists.txt  README.md  example.c  example.h  example_hal_gpio.h
src/example/tests/: example_mocks.h  test_example.cpp
src/execution_manager/: CMakeLists.txt  execution_manager.c  execution_manager.h
src/execution_manager/tests/: test_execution_manager.cpp
src/execution_mid_level/: CMakeLists.txt  README.md
src/execution_mid_level/exec_analogue_input/: CMakeLists.txt  README.md  exec_analogue_input.c  exec_analogue_input.h
src/execution_mid_level/exec_analogue_input/tests/: test_exec_analogue_input.cpp
src/execution_mid_level/exec_analogue_output/: CMakeLists.txt  README.md  exec_analogue_output.c  exec_analogue_output.h
src/execution_mid_level/exec_analogue_output/tests/: test_exec_analogue_output.cpp
src/execution_mid_level/exec_can/: CMakeLists.txt  README.md  exec_can.c  exec_can.h
src/execution_mid_level/exec_can/tests/: test_exec_can.cpp
src/execution_mid_level/exec_digital_input/: CMakeLists.txt  README.md  exec_digital_input.c  exec_digital_input.h
src/execution_mid_level/exec_digital_input/tests/: exec_digital_input_mocks.h  test_exec_digital_input.cpp
src/execution_mid_level/exec_digital_output/: CMakeLists.txt  README.md  exec_digital_output.c  exec_digital_output.h
src/execution_mid_level/exec_digital_output/tests/: test_exec_digital_output.cpp
src/execution_mid_level/exec_i2c/: CMakeLists.txt  README.md  exec_i2c.c  exec_i2c.h
src/execution_mid_level/exec_i2c/tests/: test_exec_i2c.cpp
src/execution_mid_level/exec_pwm_capture/: CMakeLists.txt  README.md  exec_pwm_capture.c  exec_pwm_capture.h
src/execution_mid_level/exec_pwm_gen/: CMakeLists.txt  README.md  exec_pwm_gen.c  exec_pwm_gen.h
src/execution_mid_level/exec_spi/: CMakeLists.txt  README.md  exec_spi.c  exec_spi.h
src/execution_mid_level/exec_uart/: CMakeLists.txt  README.md  exec_uart.c  exec_uart.h
src/external_flash/: CMakeLists.txt  README.md  external_flash.c  external_flash.h  external_flash_allocator.c  external_flash_allocator.h
src/external_flash/tests/: external_flash_mocks.h  test_external_flash.cpp
src/feasibility_analyser/: CMakeLists.txt  README.md  feasibility_analyser.c  feasibility_analyser.h
src/feasibility_analyser/tests/: test_feasibility_analyser.cpp
src/flash_manager/: CMakeLists.txt  README.md  flash_manager.c  flash_manager.h  result_buffer.h
src/flash_manager/tests/: test_buffer_manager.cpp  test_flash_manager.cpp
src/hardware/: CMakeLists.txt  README.md
src/hardware/hw_gpio/: CMakeLists.txt  README.md  hw_gpio.c  hw_gpio.h
src/hardware/hw_timer/: CMakeLists.txt  hw_timer.c  hw_timer.h
src/hardware/hw_uart/: CMakeLists.txt  hw_uart.c  hw_uart.h
src/hardware_low_level/: CMakeLists.txt  README.md
src/hardware_low_level/hw_adc/: CMakeLists.txt  README.md  hw_adc.c  hw_adc.h
src/hardware_low_level/hw_can/: CMakeLists.txt  README.md  hw_can.c  hw_can.h
src/hardware_low_level/hw_gpio/: CMakeLists.txt  README.md  hw_gpio.c  hw_gpio.h
src/hardware_low_level/hw_i2c/: CMakeLists.txt  README.md  hw_i2c.c  hw_i2c.h
src/hardware_low_level/hw_nand/: CMakeLists.txt  README.md  hw_nand.c  hw_nand.h
src/hardware_low_level/hw_pwm_capture/: CMakeLists.txt  README.md  hw_pwm_capture.c  hw_pwm_capture.h
src/hardware_low_level/hw_pwm_gen/: CMakeLists.txt  README.md  hw_pwm_gen.c  hw_pwm_gen.h
src/hardware_low_level/hw_qspi/: CMakeLists.txt  README.md  hw_qspi.c  hw_qspi.h
src/hardware_low_level/hw_spi/: CMakeLists.txt  README.md  hw_spi.c  hw_spi.h  hw_spi_config.c  hw_spi_internal.h  hw_spi_rx.c  hw_spi_tx.c  hw_spi_tx_config.c  hw_spi_tx_master.c  hw_spi_tx_slave.c
src/hardware_low_level/hw_timer/: CMakeLists.txt  README.md  hw_timer.c  hw_timer.h
src/hardware_low_level/hw_uart/: CMakeLists.txt  README.md  hw_uart.c  hw_uart.h  hw_uart_console.c  hw_uart_console.h  hw_uart_dut.c  hw_uart_dut.h
src/hardware_low_level/hw_usb/: CMakeLists.txt  README.md  hw_usb.c  hw_usb.h
src/hardware_low_level/hw_watchdog/: CMakeLists.txt  README.md  hw_watchdog.c  hw_watchdog.h
src/host_interface/: CMakeLists.txt  README.md  host_communications.c  host_communications.h  result_send.c  result_send.h  test_package_recieve.c  test_package_recieve.h
src/host_interface/tests/: test_host_interface.cpp
src/logic_expander/: CMakeLists.txt  README.md  logic_expander.c  logic_expander.h
src/logic_expander/tests/: test_logic_expander.cpp
src/power/: CMakeLists.txt  README.md  power.c  power.h
src/power/tests/: test_power.cpp
src/rtos/: CMakeLists.txt  README.md  rtos.h  rtos_config.h  stub_queue.c  stub_task.c
src/run_state_manager/: CMakeLists.txt  README.md  configuration_application.c  configuration_application.h  run_state_manager.c  run_state_manager.h
src/run_state_manager/tests/: test_run_state_manager.cpp
src/system_monitoring/: CMakeLists.txt  README.md  system_monitoring.c  system_monitoring.h  watchdog.c  watchdog.h
src/system_monitoring/tests/: test_system_monitoring.cpp
src/test_scheduler/: CMakeLists.txt  README.md  test_scheduler.c  test_scheduler.h
src/test_scheduler/tests/: test_test_scheduler.cpp
(+81 files in other folders)
