# List modules here
add_subdirectory(app_main)
add_subdirectory(background)
add_subdirectory(buffer_manager)
add_subdirectory(console)
add_subdirectory(example)
add_subdirectory(execution_manager)
add_subdirectory(execution_mid_level)
add_subdirectory(external_flash)
add_subdirectory(feasibility_analyser)
add_subdirectory(hardware_low_level)
add_subdirectory(host_interface)
add_subdirectory(logic_expander)
add_subdirectory(power)
add_subdirectory(rtos)
add_subdirectory(run_state_manager)
add_subdirectory(system_monitoring)
