# List modules here
add_subdirectory(exec_analogue_input)
add_subdirectory(exec_analogue_output)
add_subdirectory(exec_can)
add_subdirectory(exec_digital_input)
add_subdirectory(exec_digital_output)
add_subdirectory(exec_i2c)
add_subdirectory(exec_pwm_capture)
add_subdirectory(exec_pwm_gen)
add_subdirectory(exec_spi)
add_subdirectory(exec_uart)


