# List modules here
add_subdirectory(hw_adc)
add_subdirectory(hw_can)
add_subdirectory(hw_gpio)
add_subdirectory(hw_i2c)
add_subdirectory(hw_pwm_capture)
add_subdirectory(hw_pwm_gen)
add_subdirectory(hw_qspi)
add_subdirectory(hw_spi)
add_subdirectory(hw_timer)
add_subdirectory(hw_uart)
add_subdirectory(hw_usb)
add_subdirectory(hw_watchdog)

